fix nav overlap and content fetch issue by adding a blank index.md for homepage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,12 +64,12 @@ body.pink-mode {
 
 .article-nav {
   height: 100vh;
-  width: 18rem;
+  width: 16rem;
   position: fixed;
   top: 0;
   left:0;
   display: none;
-  @media (min-width: 1020px) {
+  @media (min-width: 1380px) {
     display: block;
   }
 }
